--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <!-- Home Section -->
     <section id="home">
-      <center><h1>Welcome to Sam's Support</h1></center>
-      <p>Hey there! If you're searching for first-class IT support that can simplify your home tech environment, you're in the right spot. I'm Sam, the creator and driving force behind Sam's Support, LLC. My mission is simple: offer standout IT services that are custom-fit to your unique demands. In a world where technology is ever-evolving, why settle for less? I get it, technology can be a headache but it doesn't have to be. Let me handle the tech stuff, so you can focus on what you do best, enjoying your home life.</p>
+      <center><h1>CircuitSami</h1></center>
+      <p>Delve into the digital realm of Sam, where technology and expertise converge. Here, you'll discover projects that showcase my skill in delivering innovative tech solutions. Explore my website to learn more about how I can elevate your digital experience.</p>
     </section>
 
   </main>
