--- a/socials.html
+++ b/socials.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sam's Support, LLC</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="IMG_4540.png" />
+</head>
+<body>
+
+   <!-- Header Section -->
+   <header>
+       <center><img src="IMG_4540.png" alt="Sam's Support Logo" height="800" width="800"> </center>
+       <nav>
+           <ul>
+               <li><a href="./homepage.html">Home</a></li>
+               <li><a href="./services.html">Service</a></li>
+               <li><a href="./socials.html">Socials</a></li>
+               <li><a href="./contact.html">Contact</a></li>
+           </ul>
+       </nav>
+   </header>
+
+    <title>Social Media</title>
+
+    <div class="container">
+        <h1>Social Media Platforms</h1>
+        <div class="social-media">
+            <a href="https://www.facebook.com/samssupportllc?mibextid=2JQ9oc" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/samssupportllc/" target="_blank">Instagram</a>
+            <a href="https://nextdoor.com/pages/sams-support-chesapeake-va/?init_source=org_pages" target="_blank">Nextdoor</a>
+        </div>
+    </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2023 Sam's Support, LLC. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
 
