--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sam's Support, LLC</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="transparent(2).png" />
+</head>
+<body>
 
+   <!-- Header Section -->
+   <header>
+       <center><img src="IMG_4540.png" alt="Sam's Support Logo" height="800" width="800"> </center>
+       <nav>
+           <ul>
+               <li><a href="./homepage.html">Home</a></li>
+               <li><a href="./services.html">Service</a></li>
+               <li><a href="./socials.html">Socials</a></li>
+               <li><a href="./contact.html">Contact</a></li>
+           </ul>
+       </nav>
+   </header>
+
+    <!-- Main Content -->
+    <main>
+
+            <!-- Contact -->
+            <section id="contact-info">
+                <center><h1>Contact Sam's Support</h1></section></center>
+                <center><p>Ready to take the next step? Reach out and let's chat about how Sam's Support, LLC can take your tech game to the next level. Because when it comes to IT, you deserve nothing but the best.</p></center>
+                <center><p><strong>Email:</strong> <a href="mailto:sam@samssupportllc.com" style="color: white;">sam@samssupportllc.com</a></p></center>
+                <center><p><strong>Phone:</strong> <a href="tel:+17575418014" style="color: white;">757.541.8014</a></p></center>
+            </section>            
+            
+    </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2023 Sam's Support, LLC. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
