--- a/socials.html
+++ b/socials.html
@@ -27,9 +27,8 @@
     <div class="container">
         <h1>Social Media Platforms</h1>
         <div class="social-media">
-            <a href="https://www.facebook.com/samssupportllc?mibextid=2JQ9oc" target="_blank">Facebook</a>
-            <a href="https://www.instagram.com/samssupportllc/" target="_blank">Instagram</a>
-            <a href="https://nextdoor.com/pages/sams-support-chesapeake-va/?init_source=org_pages" target="_blank">Nextdoor</a>
+            <a href="https://www.facebook.com/samssupportllc?mibextid=2JQ9oc" target="_blank">Github</a>
+            <a href="https://nextdoor.com/pages/sams-support-chesapeake-va/?init_source=org_pages" target="_blank">X</a>
         </div>
     </div>
 
