--- a/socials.html
+++ b/socials.html
@@ -28,7 +28,7 @@
         <h1>Social Media Platforms</h1>
         <div class="social-media">
             <a href="https://www.facebook.com/samssupportllc?mibextid=2JQ9oc" target="_blank">Github</a>
-            <a href="https://nextdoor.com/pages/sams-support-chesapeake-va/?init_source=org_pages" target="_blank">X</a>
+            <a href="https://twitter.com/circuitsami" target="_blank">X</a>
         </div>
     </div>
 
