--- a/socials.html
+++ b/socials.html
@@ -27,7 +27,7 @@
     <div class="container">
         <h1>Social Media Platforms</h1>
         <div class="social-media">
-            <a href="https://www.facebook.com/samssupportllc?mibextid=2JQ9oc" target="_blank">Github</a>
+            <a href="https://github.com/circuitsami" target="_blank">Github</a>
             <a href="https://twitter.com/circuitsami" target="_blank">X</a>
         </div>
     </div>
