--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sam's Support, LLC</title>
+    <title>CircuitSami</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="transparent(2).png" />
+    <link rel="shortcut icon" type="image/x-icon" href="IMG_4540" />
 </head>
 <body>
 
@@ -27,7 +27,7 @@
 
             <!-- Contact -->
             <section id="contact-info">
-                <center><h1>Contact Sam's Support</h1></section></center>
+                <center><h1>Contact Sam</h1></section></center>
                 <center><p>Ready to take the next step? Reach out and let's chat about how Sam's Support, LLC can take your tech game to the next level. Because when it comes to IT, you deserve nothing but the best.</p></center>
                 <center><p><strong>Email:</strong> <a href="mailto:sam@samssupportllc.com" style="color: white;">sam@samssupportllc.com</a></p></center>
                 <center><p><strong>Phone:</strong> <a href="tel:+17575418014" style="color: white;">757.541.8014</a></p></center>
