--- a/socials.html
+++ b/socials.html
@@ -25,7 +25,8 @@
     <title>Social Media</title>
 
     <div class="container">
-        <h1>Social Media Platforms</h1>
+        <section id="home">
+        <h1>Social Media Platforms</h1></section>
         <div class="social-media">
             <a href="https://github.com/circuitsami" target="_blank">Github</a>
             <a href="https://twitter.com/circuitsami" target="_blank">X</a>
