--- a/socials.html
+++ b/socials.html
@@ -25,7 +25,7 @@
     <title>Social Media</title>
 
     <div class="container">
-        <section id="home">
+        <section id="socialmedia">
         <h1>Social Media Platforms</h1></section>
         <div class="social-media">
             <a href="https://github.com/circuitsami" target="_blank">Github</a>
