--- a/socials.html
+++ b/socials.html
@@ -26,10 +26,10 @@
 
     <div class="container">
         <section id="socialmedia">
-        <h1>Social Media Platforms</h1>
+        <h1>Social Media Platforms</h1></section>
         <div class="social-media">
             <a href="https://github.com/circuitsami" target="_blank">Github</a>
-            <a href="https://twitter.com/circuitsami" target="_blank">X</a></section>
+            <a href="https://twitter.com/circuitsami" target="_blank">X</a>
         </div>
     </div>
 
