--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CircuitSami</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="IMG_4540" />
+    <link rel="shortcut icon" type="image/x-icon" href="IMG_4540.png" />
 </head>
 <body>
 
