--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Home Section -->
     <section id="home">
       <center><h1>CircuitSami</h1></center>
-      <p>Delve into the digital realm of Sam, where technology and expertise converge. Here, you'll discover projects that showcase my skill in delivering innovative tech solutions. Explore my website to learn more about how I can elevate your digital experience.</p>
+      <p>Hi, I'm Sam! Welcome to my website! Here, you can find a range of content from links to other websites I've developed to network designs.</p>
     </section>
 
   </main>
