--- a/socials.html
+++ b/socials.html
@@ -27,7 +27,7 @@
     <div class="container">
         <section id="socialmedia">
         <h1>Social Media Platforms</h1></section>
-        <a class="twitter-timeline" href="https://twitter.com/circuitsami?ref_src=twsrc%5Etfw">Tweets by circuitsami</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+       <a class="twitter-timeline" data-width="600" data-height="500" data-theme="dark" href="https://twitter.com/circuitsami?ref_src=twsrc%5Etfw">Tweets by circuitsami</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <div class="social-media">
             <a href="https://github.com/circuitsami" target="_blank">Github</a>
             <a href="https://twitter.com/circuitsami" target="_blank">X</a>
