--- a/socials.html
+++ b/socials.html
@@ -30,7 +30,7 @@
        <a class="twitter-timeline" data-width="600" data-height="500" data-theme="dark" href="https://twitter.com/circuitsami?ref_src=twsrc%5Etfw">Tweets by circuitsami</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <div class="social-media">
             <a href="https://github.com/circuitsami" target="_blank">Github</a>
-            <a href="https://twitter.com/circuitsami" target="_blank">X</a>
+            <a href="https://twitter.com/circuitsami?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @circuitsami</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
 
