--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CircuitSami</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="IMG_4540.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="IMG_4542.png" />
 </head>
 <body>
 
@@ -18,10 +18,10 @@
                <li><a href="./homepage.html">Home</a></li>
                <li><a href="./socials.html">Socials</a></li>
                <li><a href="./contact.html">Contact</a></li>
+               <li><a href="https://samssupportllc.com">Sam's Support</a></li>
            </ul>
        </nav>
    </header>
-
   <!-- Main Content -->
   <main>
 
