--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
       <center><h1>CircuitSami</h1></center>
       <p>Hi, I'm Sam! Welcome to my website! Here, you can find a range of content from links to other websites I've developed to network designs.</p>
     </section>
+   
+     <section><title>Social Media</title>
+
+    <div class="container">
+        <section id="socialmedia">
+        <h1>Social Media Platforms</h1></section>
+        <div class="social-media">
+            <a href="https://github.com/circuitsami" target="_blank">Github</a>
+            <a href="https://twitter.com/circuitsami?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @circuitsami</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+    </div></section>
 
   </main>
 
