--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Hey there, I'm Sam! Welcome to my website! This is where I get to show off some 
 
     <!-- Contact -->
     <section id="contact-info">
-        <center><h1>Contact Sam</h1></section></center>
+        <center><h1>Contact Sam</h1></center>
         <center><p>If you have questions about my content or want to collaborate, you can find my contact information below.</p></center>
         <center><p><strong>Email:</strong> <a href="mailto:sam@samssupportllc.com" style="color: white;">sam@samssupportllc.com</a></p></center>
         <center><p><strong>Phone:</strong> <a href="tel:+17575418014" style="color: white;">757.541.8014</a></p></center>
