--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Hey there, I'm Sam! Welcome to my website! This is where I get to show off some 
 
     <div class="container">
         <section id="socialmedia">
-        <h1>Social Media Platforms</h1></section>
+        <h1>Platforms</h1></section>
         <div class="social-media">
             <a href="https://github.com/circuitsami" target="_blank">Github</a>
         </div>
