--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <nav>
            <ul>
                <li><a href="./homepage.html">Home</a></li>
-               <li><a href="./socials.html">Socials</a></li>
+               <li><a href="./socials.html">Projects</a></li>
                <li><a href="https://samssupportllc.com">Sam's Support</a></li>
            </ul>
        </nav>
@@ -31,20 +31,20 @@
 Hey there, I'm Sam! Welcome to my website! This is where I get to show off some of my work, from the websites I've put together to the network setups I've designed. It's a mix of what I love doing and am good at. So, look around, see what catches your eye, and feel free to reach out if something sparks your interest. Thanks for stopping by!</p>
     </section>
    
-     <section><title>Platforms</title>
+     <section><title>Social Media Platforms</title>
 
     <div class="container">
         <section id="socialmedia">
-        <h1>Platforms</h1></section>
+        <center><h1>Platforms</h1></section></center>
         <div class="social-media">
-            <a href="https://github.com/circuitsami" target="_blank">Github</a>
+        <center><a href="https://github.com/circuitsami" target="_blank">Github</a></center>
         </div>
     </div></section>
 
     <!-- Contact -->
     <section id="contact-info">
         <center><h1>Contact Sam</h1></center>
-        <center><p>If you have questions about my content or want to collaborate, you can find my contact information below.</p></center>
+        <center><p>If you have questions about my content, you can find my contact information below.</p></center>
         <center><p><strong>Email:</strong> <a href="mailto:sam@samssupportllc.com" style="color: white;">sam@samssupportllc.com</a></p></center>
         <center><p><strong>Phone:</strong> <a href="tel:+17575418014" style="color: white;">757.541.8014</a></p></center>
     </section>   
