--- a/certsandprojects.html
+++ b/certsandprojects.html
@@ -16,7 +16,7 @@
        <nav>
            <ul>
                <li><a href="./homepage.html">Home</a></li>
-               <li><a href="./socials.html">Projects</a></li>
+               <li><a href="./certsandprojects.html">Certs and Projects</a></li>
                <li><a href="https://samssupportllc.com">Sam's Support</a></li>
            </ul>
        </nav>
