--- a/certsandprojects.html
+++ b/certsandprojects.html
@@ -21,5 +21,11 @@
            </ul>
        </nav>
    </header>
-  <!-- Main Content -->
-  <main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 Sam's Support, LLC. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
