--- a/certsandprojects.html
+++ b/certsandprojects.html
@@ -22,6 +22,18 @@
        </nav>
    </header>
 
+    <!-- Certification Section -->
+    <section id="certification">
+      <center><h1>Industry Certifications</h1></center>
+      <p>Here is a list of my verified industry certifications.</p>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="certification">
+      <center><h1>Industry Certifications</h1></center>
+      <p>Here are some projects I have worked on.</p>
+    </section>
+
   <!-- Footer -->
   <footer>
     <p>&copy; 2024 Sam's Support, LLC. All rights reserved.</p>
