--- a/certsandprojects.html
+++ b/certsandprojects.html
@@ -15,7 +15,7 @@
        <center><img src="IMG_4542.png" alt="SS Logo" height="300" width="500"> </center>
        <nav>
            <ul>
-               <li><a href="./homepage.html">Home</a></li>
+               <li><a href="./index.html">Home</a></li>
                <li><a href="./certsandprojects.html">Certs and Projects</a></li>
                <li><a href="https://samssupportllc.com">Sam's Support</a></li>
            </ul>
